# BmpCV

./: CMakeLists.txt  LICENSE  README.md  bmp.cpp  bmp.h  gui.cpp  gui.h  library.cpp  library.h  setting.ini
Qt_GUI/Qt_GUI/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-024ad9c168ed3ff6b4d8.json  (+6 more)
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/.cmake/api/v1/reply.prev/: cmakeFiles-v1-9926dbf95ac7dbe5242b.json  codemodel-v2-705363f9c51ace74a4de.json  index-2023-01-05T09-05-46-0057.json  target-Qt_GUI-Release-30591edef842367db533.json
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/Qt_GUI_autogen/: deps  mocs_compilation.cpp
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/Qt_GUI_autogen/EWIEGA46WW/: moc_client.cpp  moc_client.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
Qt_GUI/build-Qt_GUI-Desktop_Qt_5_15_2_MinGW_64_bit-Release/Qt_GUI_autogen/include/: ui_mainwindow.h
include/: bmp.h  error.h  filter.h  gui.h  img_proc.h  img_proc_2.h  transform.h
log/: log.txt
src/: bmp.cpp  filter.cpp  gui.cpp  img_proc.cpp  img_proc_2.cpp  transform.cpp
test/: CMakeLists.txt  test.cpp
(+378 files in other folders)
